# NNGA-obstacle-avoidance-simulation

./: CMakeLists.txt  Fuzzifier.m  FuzzyLogicController.m  GeneticAlgorithm.m  NeuralNet.asv  NeuralNet.m  NueralNetTestEnvironment.asv  NueralNetTestEnvironment.m  NueralNetTestEnvironment.m~  ObsSensor1.asv  ObsSensor1.m  Original_run_model.m  PerfectObservationSensor.asv  PerfectObservationSensor.m  PerfectObservationSensor.m~  README.md  SensorTest.asv  SensorTest.m  SimulationTrainingEnvironment.asv  SimulationTrainingEnvironment.m  WallGeneration1.m  confuneq.m  drawrobot.m  full_mdl_motors.m  motor.asv  motor.m  neuralLayer.m  objfun.m  perceptron.m  perfectNet1.m  robot.asv  robot.m  run_model.asv  run_model.m  test.asv  test.m  wallObject.m
MATLABVersion/: NeuralNet.m  NueralNetTestEnvironment.m  PerfectObservationSensor.m  motor.m  robot.m
include/: MatrixMultiplication.h  NNUtils.h  NeuralLayer.h  NeuralNet.h  Neuron.h  Perceptron.h
include/DynamicModels/: ArcSensor.h  DynamicInterface.h  Motor.h  Robot.h  Sensor.h  WheeledRobot.h  motor.h
include/GeneticAlgorithm/: Agent.h  Environment.h  GeneticAlgorithm.h  Mutatable.h
include/NeuralNet/: MatrixMultiplication.h  NeuralLayer.h  NeuralNet.h  Neuron.h  Perceptron.h
src/: Example.cpp  NeuralLayer.cpp  NeuralNet.cpp  NeuralNetTest.cpp  Perceptron.cpp
src/DynamicModels/: ArcSensor.cpp  Motor.cpp  WheeledRobot.cpp  motor.cpp
src/NeuralNet/: Example.cpp  NeuralLayer.cpp  NeuralNet.cpp  Perceptron.cpp
test/: CMakeLists.txt  Test_Perceptron.cpp  main.cpp
